Refactor parameter classes